tests/invalid/bad_exported_mode.err_exp2
Mercury/ints/bad_exported_mode_helper_1.int:003: Error: `:- mode' declaration
Mercury/ints/bad_exported_mode_helper_1.int:003:   for predicate `p'/2
Mercury/ints/bad_exported_mode_helper_1.int:003:   without corresponding
Mercury/ints/bad_exported_mode_helper_1.int:003:   `:- pred' declaration.
Mercury/ints/bad_exported_mode_helper_1.int:003: Inferred :- pred p(T1, T2).
